; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/firewire/extr_sbp_targ.c_sbp_targ_post_explore.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/firewire/extr_sbp_targ.c_sbp_targ_post_explore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sbp_targ_softc = type { i32, i32 }

@F_FREEZED = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @sbp_targ_post_explore to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sbp_targ_post_explore(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.sbp_targ_softc*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.sbp_targ_softc*
  store %struct.sbp_targ_softc* %5, %struct.sbp_targ_softc** %3, align 8
  %6 = load i32, i32* @F_FREEZED, align 4
  %7 = xor i32 %6, -1
  %8 = load %struct.sbp_targ_softc*, %struct.sbp_targ_softc** %3, align 8
  %9 = getelementptr inbounds %struct.sbp_targ_softc, %struct.sbp_targ_softc* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = and i32 %10, %7
  store i32 %11, i32* %9, align 4
  %12 = load %struct.sbp_targ_softc*, %struct.sbp_targ_softc** %3, align 8
  %13 = getelementptr inbounds %struct.sbp_targ_softc, %struct.sbp_targ_softc* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @TRUE, align 4
  %16 = call i32 @xpt_release_simq(i32 %14, i32 %15)
  ret void
}

declare dso_local i32 @xpt_release_simq(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
